[package]
name = "riker-es"
version = "0.1.0"
authors = ["Daniel Olano <daniel@olanod.com>"]
edition = "2018"

[dependencies]
riker = "0.4.1"
uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }
serde = "1.0.114"
log = "0.4.8"
chrono = { version = "0.4.13", features = ["serde"] }
bson = "1.0.0"
futures = "0.3.5"
async-trait = "0.1.36"

[dev-dependencies]
riker-patterns = "0.4.1"
